<resources>
    <string name="app_name">PodcastApp</string>

    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="e_mail">E-mail</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="this_is_not_an_email">This in not an e-mail</string>
    <string name="password_should_be_longer">Password should be longer than 3 chars!</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="menu_search">search</string>
    <string name="menu_settings">settings</string>
    <string name="menu_navigation">navigation</string>
    <string name="my_podcasts">My Podcasts</string>
    <string name="no_podcasts_to_show_check_internet">No podcasts to show.\nCheck your internet connection.</string>
    <string name="no_podcasts_to_show_search">No podcasts to show.\nYou can add some podcasts from podcasts searcher.</string>
    <string name="logout">Logout</string>
    <string name="number_of_episodes">%d episodes</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="subscribe">subscribe</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="cancel">Cancel</string>
    <string name="audio_url">audio_url</string>
    <string name="start_time">00:00</string>
</resources>
